# fireredvad-onnx

./: .gitignore  README.md  client.py  pyproject.toml  server.py
onnx_models/: fireredvad_stream_vad.onnx  fireredvad_vad.onnx
